--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.home=D:/Apache Tomcat/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=D:\\Apache Tomcat\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=default
 user.properties.file=C:\\Users\\A Hi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
