--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,6 +56,8 @@ file.reference.logback-classic-1.2.3.jar=web\\Libs\\logback-classic-1.2.3.jar
 file.reference.logback-core-1.2.3.jar=web\\Libs\\logback-core-1.2.3.jar
 file.reference.pdfbox-2.0.9.jar=web\\Libs\\pdfbox-2.0.9.jar
 file.reference.pdfbox-tools-2.0.9.jar=web\\Libs\\pdfbox-tools-2.0.9.jar
+file.reference.selenium-server-3.9.1.zip=web\\Libs\\selenium-server-3.9.1.zip
+file.reference.selenium-server-standalone-3.9.1.jar=web\\Libs\\selenium-server-standalone-3.9.1.jar
 file.reference.slf4j-api-1.7.25.jar=web\\Libs\\slf4j-api-1.7.25.jar
 file.reference.tess4j-3.4.8.jar=web\\Libs\\tess4j-3.4.8.jar
 file.reference.xmlgraphics-commons-1.5.jar=web\\Libs\\xmlgraphics-commons-1.5.jar
@@ -100,7 +102,9 @@ javac.classpath=\
     ${file.reference.tess4j-3.4.8.jar}:\
     ${file.reference.xmlgraphics-commons-1.5.jar}:\
     ${libs.jstl.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.selenium-server-3.9.1.zip}:\
+    ${file.reference.selenium-server-standalone-3.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
