Hung 6 12 cap nhat forum + db forum
Hung 6 12 cap nhat forum + db forum

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -160,6 +160,10 @@
         <servlet-name>PasswordRecoveryUpdate</servlet-name>
         <servlet-class>Controllers.Account.PasswordRecoveryUpdate</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Archive</servlet-name>
+        <servlet-class>Controllers.Forum.Archive</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Forum</servlet-name>
         <url-pattern>/Forum/*</url-pattern>
@@ -631,6 +635,10 @@
     <servlet-mapping>
         <servlet-name>PasswordRecoveryUpdate</servlet-name>
         <url-pattern>/PasswordRecoveryUpdate</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Archive</servlet-name>
+        <url-pattern>/Archive/*</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
