--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -648,6 +648,18 @@
         <servlet-name>changeStstusControl</servlet-name>
         <url-pattern>/changeStstus</url-pattern>
     </servlet-mapping>
+    
+    
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error.jsp</location>
+    </error-page>
+    
+    
     <session-config>
         <session-timeout>
             3000
